enhanced UI and features

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,11 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  
+  <!-- Script to configure Flutter to use HTML renderer -->
+  <script type="text/javascript">
+      window.flutterWebRenderer = "html";
+  </script>
 </head>
 <body>
   <script>
